insert terminal status in metadata
